v125
    -Fix mdf detection
    -Fix codec reference rebound issue
    -Re-enable EOLTEXT
v124
    -Fix detection
v123
    -Fix gzip parsing.
    -Fix bzip2 memory leak.
v122
    -Re-enable zlibFilter.
    -Add PREFLATE type.
    -Test ZLIB transform fail and use PREFLATE if needed.
    -Fix for bzip2, tar parser.
v121
    -Fix GZIP parser false positive detection that suppressed bzip2/tar detection.
     The fallback was incorrectly returning END even when preflate validation failed.
v120
    -Reintroduce PNG (.png) file format detection and preprocessing support.
    -Understands multi-IDAT chunks.
    -Non-standard and optimized images are recognized as well.
v119
    -Add GZIP (.gz) file format detection and preprocessing support.
    -Implement GZIP header detection with proper header length calculation.
    -Integrate with deflate preprocessing filter for compression/decompression.
v118
    -Add ZIP file format detection and deflate compression handling.
    -Enhance analyzer to detect ZIP files and handle their deflate streams.
v117
    -Replace zlib filter with preflate filter for improved compression.
    -Add build support for the preflate library.
    -Fix non-portable GCC-only compiler flags.
    -Correct C++ standard header includes.
    -Fix case-sensitivity in predictor includes.
    -Fix jpeg detection. 
     Tiff can be as Exif image inside jpeg, so set same priority.
v116
    -Fix zlib, mdf, exe parser.
    -Update wav parser.
    -Add mscf (MS Cab) parser.
    -Change Analyzer.
v115
    -Add tar, png, bzip2, szdd parser.
    -Tiff parser:
     Detect more jpg data.
     Sort image data offsets in to ascending order.
     Enable some types and tags.
     Fix MM mode detection.
     If tag data pos is past current pos then ignore image.
     Uncompressed data with more then 32bits are reported as DEFAULT.
    -Fixes for szdd, bmp, gif, tiff, jpeg, uue, cd, mdf, bzip2 parser.
    -Update text parser.
    -In parser add last block flag.